# ai-session-manager

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
e2e/: smoke.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs  path_identity.rs  path_utils.rs  platform.rs  time_utils.rs
src-tauri/src/application/: mod.rs  session_admin_service.rs  session_query_service.rs  session_runtime_service.rs  session_settings_service.rs
src-tauri/src/commands/: health.rs  maintenance.rs  mod.rs
src-tauri/src/commands/sessions/: db_path_resolver.rs  handlers.rs  mappers.rs  mod.rs  models.rs
src-tauri/src/db/: migrate.rs
src-tauri/src/domain/: events.rs  mod.rs  models.rs  safety.rs
src-tauri/src/parsers/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/services/: collector.rs  exporter.rs  indexer.rs  mod.rs  parser_adapter.rs  query_service.rs  sync_service.rs  watcher.rs
src-tauri/tests/: collector_scan.rs  db_init.rs  delete_export.rs  detail_read_only.rs  domain_event_serde.rs  health_command.rs  indexer_idempotent.rs  migrate_paths.rs  overview_settings.rs  parse_event_adapter.rs  parsers_claude.rs  parsers_codex.rs  parsers_gemini.rs  path_identity.rs  query_service.rs  safety_rules.rs  session_admin_service.rs  session_runtime_service.rs  sessions_commands.rs  sync_service.rs  watcher_debounce.rs
(+76 files in other folders)
