[package]
name = "ai-session-manager"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ai_session_manager"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-session-manager-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rfd = "0.15"
notify = "8"

[dev-dependencies]
tempfile = "3"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[patch.crates-io]
wry = { path = "../vendor/wry-0.54.4" }
